release(v18.0.6): Add Java 8 bytecode support and refactor collection usage
- Updated the project to compile to Java 8 bytecode, ensuring compatibility with servers running Java 8.
- Replaced instances of `List.of()`, `Set.of()`, and `Map.of()` with their respective alternatives to maintain Java 8 compatibility.
- Refactored collection initializations to use `Collections.emptyList()`, `Collections.singletonList()`, and similar methods for better clarity and performance.
- Updated the Discord webhook configuration to remove the message ID for new messages.
- Added a new release note file detailing the changes and migration steps for users.