@@ -9,6 +9,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import java.util.Arrays;
 
 @SuppressWarnings("null")
 public class OrthogonalPolygonTest
@@ -16,13 +17,7 @@ public class OrthogonalPolygonTest
     @Test
     void validatesRectangle()
     {
-        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         assertTrue(result.isValid());
         assertNotNull(result.polygon());
@@ -36,12 +31,7 @@ public class OrthogonalPolygonTest
     @Test
     void rejectsOpenPath()
     {
-        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3)
-        ));
+        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3)));
 
         assertFalse(result.isValid());
         assertTrue(result.issues().stream().anyMatch(issue -> issue.type() == OrthogonalPolygonValidationIssueType.NOT_CLOSED));
@@ -50,13 +40,7 @@ public class OrthogonalPolygonTest
     @Test
     void rejectsDiagonalEdge()
     {
-        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 2),
-                new OrthogonalPoint2i(4, 4),
-                new OrthogonalPoint2i(0, 4),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 2), new OrthogonalPoint2i(4, 4), new OrthogonalPoint2i(0, 4), new OrthogonalPoint2i(0, 0)));
 
         assertFalse(result.isValid());
         assertTrue(result.issues().stream().anyMatch(issue -> issue.type() == OrthogonalPolygonValidationIssueType.NON_ORTHOGONAL_EDGE));
@@ -65,14 +49,7 @@ public class OrthogonalPolygonTest
     @Test
     void rejectsRepeatedCornerBeforeClosure()
     {
-        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 0)));
 
         assertFalse(result.isValid());
         assertTrue(result.issues().stream().anyMatch(issue -> issue.type() == OrthogonalPolygonValidationIssueType.DUPLICATE_CORNER));
@@ -81,17 +58,7 @@ public class OrthogonalPolygonTest
     @Test
     void rejectsSelfIntersection()
     {
-        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(6, 0),
-                new OrthogonalPoint2i(6, 6),
-                new OrthogonalPoint2i(2, 6),
-                new OrthogonalPoint2i(2, 2),
-                new OrthogonalPoint2i(4, 2),
-                new OrthogonalPoint2i(4, 4),
-                new OrthogonalPoint2i(0, 4),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygonValidationResult result = OrthogonalPolygon.validatePath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(6, 0), new OrthogonalPoint2i(6, 6), new OrthogonalPoint2i(2, 6), new OrthogonalPoint2i(2, 2), new OrthogonalPoint2i(4, 2), new OrthogonalPoint2i(4, 4), new OrthogonalPoint2i(0, 4), new OrthogonalPoint2i(0, 0)));
 
         assertFalse(result.isValid());
         assertTrue(result.issues().stream().anyMatch(issue -> issue.type() == OrthogonalPolygonValidationIssueType.SELF_INTERSECTION));
@@ -100,35 +67,17 @@ public class OrthogonalPolygonTest
     @Test
     void insertsNodeOnExistingEdge()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygon updated = polygon.insertNode(0, new OrthogonalPoint2i(2, 0));
 
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(2, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3)
-        ), updated.corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(2, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3)), updated.corners());
     }
 
     @Test
     void rejectsNodeAtCorner()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         assertThrows(IllegalArgumentException.class, () -> polygon.insertNode(0, new OrthogonalPoint2i(0, 0)));
     }
@@ -136,72 +85,30 @@ public class OrthogonalPolygonTest
     @Test
     void expandsSelectedEdge()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(1, 0),
-                new OrthogonalPoint2i(3, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(1, 0), new OrthogonalPoint2i(3, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.expandEdge(1, 2);
 
         assertTrue(result.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(1, 0),
-                new OrthogonalPoint2i(1, 2),
-                new OrthogonalPoint2i(3, 2),
-                new OrthogonalPoint2i(3, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3)
-        ), result.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(1, 0), new OrthogonalPoint2i(1, 2), new OrthogonalPoint2i(3, 2), new OrthogonalPoint2i(3, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3)), result.polygon().corners());
     }
 
     @Test
     void repeatedExpansionCompressesOldTipCornersIntoSidePoints()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(1, 0),
-                new OrthogonalPoint2i(3, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(1, 0), new OrthogonalPoint2i(3, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygon first = polygon.expandEdge(1, 1).polygon();
         OrthogonalPolygonValidationResult second = first.expandEdge(2, 1);
 
         assertTrue(second.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(1, 0),
-                new OrthogonalPoint2i(1, 2),
-                new OrthogonalPoint2i(3, 2),
-                new OrthogonalPoint2i(3, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3)
-        ), second.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(1, 0), new OrthogonalPoint2i(1, 2), new OrthogonalPoint2i(3, 2), new OrthogonalPoint2i(3, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3)), second.polygon().corners());
     }
 
     @Test
     void rejectsExpansionThatSelfIntersects()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(1, 0),
-                new OrthogonalPoint2i(3, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(1, 0), new OrthogonalPoint2i(3, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.expandEdge(1, 3);
 
@@ -212,100 +119,45 @@ public class OrthogonalPolygonTest
     @Test
     void movesCornerAndAdaptsAdjacentSides()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(8, 0),
-                new OrthogonalPoint2i(8, 6),
-                new OrthogonalPoint2i(5, 6),
-                new OrthogonalPoint2i(5, 8),
-                new OrthogonalPoint2i(0, 8),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(8, 0), new OrthogonalPoint2i(8, 6), new OrthogonalPoint2i(5, 6), new OrthogonalPoint2i(5, 8), new OrthogonalPoint2i(0, 8), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.moveCorner(3, new OrthogonalPoint2i(3, 4));
 
         assertTrue(result.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(8, 0),
-                new OrthogonalPoint2i(8, 4),
-                new OrthogonalPoint2i(3, 4),
-                new OrthogonalPoint2i(3, 8),
-                new OrthogonalPoint2i(0, 8)
-        ), result.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(8, 0), new OrthogonalPoint2i(8, 4), new OrthogonalPoint2i(3, 4), new OrthogonalPoint2i(3, 8), new OrthogonalPoint2i(0, 8)), result.polygon().corners());
     }
 
     @Test
     void movingCornerThatSmoothsNibRemovesResolvedSegmentMarkers()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(0, 8),
-                new OrthogonalPoint2i(2, 8),
-                new OrthogonalPoint2i(2, 6),
-                new OrthogonalPoint2i(4, 6),
-                new OrthogonalPoint2i(4, 8),
-                new OrthogonalPoint2i(8, 8),
-                new OrthogonalPoint2i(8, 0),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(0, 8), new OrthogonalPoint2i(2, 8), new OrthogonalPoint2i(2, 6), new OrthogonalPoint2i(4, 6), new OrthogonalPoint2i(4, 8), new OrthogonalPoint2i(8, 8), new OrthogonalPoint2i(8, 0), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.moveCorner(3, new OrthogonalPoint2i(4, 8));
 
         assertTrue(result.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(0, 8),
-                new OrthogonalPoint2i(8, 8),
-                new OrthogonalPoint2i(8, 0)
-        ), result.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(0, 8), new OrthogonalPoint2i(8, 8), new OrthogonalPoint2i(8, 0)), result.polygon().corners());
     }
 
     @Test
     void cardinalMoveCornerOntoExistingVertexSmoothsNib()
     {
         // Inner corner (4,4) merged onto (8,4) — pure X move; resize routing used to miss exact corner targets.
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(8, 0),
-                new OrthogonalPoint2i(8, 4),
-                new OrthogonalPoint2i(4, 4),
-                new OrthogonalPoint2i(4, 8),
-                new OrthogonalPoint2i(0, 8),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(8, 0), new OrthogonalPoint2i(8, 4), new OrthogonalPoint2i(4, 4), new OrthogonalPoint2i(4, 8), new OrthogonalPoint2i(0, 8), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.moveCorner(3, new OrthogonalPoint2i(8, 4));
 
         assertTrue(result.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(8, 0),
-                new OrthogonalPoint2i(8, 8),
-                new OrthogonalPoint2i(0, 8)
-        ), result.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(8, 0), new OrthogonalPoint2i(8, 8), new OrthogonalPoint2i(0, 8)), result.polygon().corners());
     }
 
     @Test
     void movingWholeSegmentedFaceResolvesMarkerIntoCleanSide()
     {
-        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(List.of(
-                new OrthogonalPoint2i(0, 0),
-                new OrthogonalPoint2i(2, 0),
-                new OrthogonalPoint2i(4, 0),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3),
-                new OrthogonalPoint2i(0, 0)
-        ));
+        OrthogonalPolygon polygon = OrthogonalPolygon.fromClosedPath(Arrays.asList(new OrthogonalPoint2i(0, 0), new OrthogonalPoint2i(2, 0), new OrthogonalPoint2i(4, 0), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3), new OrthogonalPoint2i(0, 0)));
 
         OrthogonalPolygonValidationResult result = polygon.moveEdgeRun(0, 1, 1);
 
         assertTrue(result.isValid());
-        assertEquals(List.of(
-                new OrthogonalPoint2i(0, 1),
-                new OrthogonalPoint2i(4, 1),
-                new OrthogonalPoint2i(4, 3),
-                new OrthogonalPoint2i(0, 3)
-        ), result.polygon().corners());
+        assertEquals(Arrays.asList(new OrthogonalPoint2i(0, 1), new OrthogonalPoint2i(4, 1), new OrthogonalPoint2i(4, 3), new OrthogonalPoint2i(0, 3)), result.polygon().corners());
     }
 }
